index.html changed

--- a/index.html
+++ b/index.html
@@ -51,14 +51,19 @@
       <div class="about-col-2">
         <h1 class="sub-title">ABOUT ME</h1>
         <p>My name is Amruta and I'm an software engineer.
-          I am driven and I have a growth mindset. 
-          Currently completing ServiceNow NextGen Program,
-           working towards ServiceNow CSA and CAD certifications. 
-           Pivoting from the customer service industry, 
-           I understand how to solve problem creatively,
-          can quickly adapt to new environments, have effective 
-          interpersonal skills, 
-          and enjoy working in a collaborative customer-first-driven environment.</p>
+          I am driven and I have a growth mindset. I have worked
+          as an Assistant Professor and taught various subjects.
+          I always get facsinated that how technology can change world 
+          and people lives.<br>
+          <br>
+          <p>
+          One of the reasons that made me want to pursue a career in tech
+          is that I realised how technology has helped connect people 
+          regardless of the distance, especially at the height of COVID-19.
+          Apart from that, I want to be a part of an industry that inspires
+          and drives the way the world functions and lives
+        </p>
+          </p>
       </div>
     </div>
   </div>
