--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <img class="header__logo"src="image/logo4.png" class="logo">
 
         <nav class="navbar">
-            <a href="#" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#skills">Skills</a>
-            <a href="#services">Project</a>
-            <a href="#footer">Contact</a>
+            <a href="#" class="navbar__link" class="active">Home</a>
+            <a href="#about" class="navbar__link">About</a>
+            <a href="#skills" class="navbar__link">Skills</a>
+            <a href="#services" class="navbar__link">Project</a>
+            <a href="#footer" class="navbar__link">Contact</a>
         </nav>
 
     </header>
@@ -50,18 +50,12 @@
 
       <div class="about-col-2">
         <h1 class="sub-title">ABOUT ME</h1>
-        <p>My name is Amruta and I'm an software engineer.
-          I am driven and I have a growth mindset. I have worked
-          as an Assistant Professor and taught various subjects.
-          I always get facsinated that how technology can change world 
-          and people lives.<br>
-          <br>
-          <p>
-          One of the reasons that made me want to pursue a career in tech
-          is that I realised how technology has helped connect people 
-          regardless of the distance, especially at the height of COVID-19.
-          Apart from that, I want to be a part of an industry that inspires
-          and drives the way the world functions and lives
+        <p>Experienced Professional with a demonstrated record of effectiveness as a teacher 
+          in an Engineering college.Skilled in Cloud Computing, Green Computing, 
+          Software Testing and Professional Ethics. Technical &Operations background with a 
+          Master of Technology (M.Tech.) focused in Software Engineering from Devi 
+          AhilyaVIshvavidyalaya with a promise of growth in teaching and research or artistic
+           and creative activity.
         </p>
           </p>
       </div>
@@ -204,7 +198,7 @@
         </section>
 
         <section class="footer_links">
-        <a href="https://www.linkedin.com/in/amruta-marathe" class="footer__links__item" target="_blank">
+        <a href="https://www.linkedin.com/in/amrutamarathe" class="footer__links__item" target="_blank">
           <i class="fa-brands fa-linkedin fa-3x"></i>
         </a>
         <a href="https://github.com/amruta2425" class="footer__links__item" target="_blank">
